--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@bull-board/api": "^5.21.0",
+    "@bull-board/express": "^5.21.0",
+    "@bull-board/nestjs": "^5.21.0",
+    "@nestjs/bull": "^10.1.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
@@ -29,9 +33,11 @@
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.16.1",
     "bcrypt": "^5.1.1",
+    "bull": "^4.15.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "express-handlebars": "^7.1.3",
+    "ioredis": "^5.4.1",
     "nodemailer": "^6.9.14",
     "nodemailer-express-handlebars": "^6.1.2",
     "reflect-metadata": "^0.2.0",
